--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,13 @@
 </head>
 
 <body>
+    <% if (locals.fileLink !=null) { %>
+        <div style="margin-bottom: 1rem;">
+            Your file is available at: <a href="<%= locals.fileLink %>">
+                <%= locals.fileLink %>
+            </a>
+        </div>
+        <% } %>
     <form action="/upload" method="post" style="display: grid; gap: .5rem; grid-template-columns: auto 1fr; max-width: 500px; margin: 0 auto;" enctype="multipart/form-data">
         <label for="file">File</label>
         <input type="file" name="file" id="file" required>
